# SHB-NETBOT

./: .gitattributes  .gitignore  .replit  Procfile  README.md  add_csv_edit_route.py  app.py  app.py.backup  app_clean.py  app_modern.py  app_new.py  app_simple.py  auto_processor.py  business_guide_processor.py  chatbot.py  config.py  csv_editor.py  csv_preview_part.txt  csv_to_narrative.py  database.py  document_processor.py  fine_tuning.py  fine_tuning_monitor.py  flow_converter.py  hello_world.py  models.py  new_view_api.py  pyproject.toml  replit.sh  requirements.txt  run.sh  run_streamlit.sh  shinhan_netbot.db  simple_document_manager.html  start.sh  streamlit_app.py  test_excel_rag.py  test_upload.csv  test_version_detection.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted---1747665816751.txt  Pasted---1747665833029.txt  Pasted--content-n-n-CSV-ud30c-uc77c-uc5c5-ubb34-uc548-ub0b4-uac00-uc774-ub4dc-uc808-ucc28-uc5-1748009339082.txt  Pasted--content-ub124-ud2b8-uc6cc-ud06c-ubb38-uc81c-ud574-uacb0-uac00-uc774-ub4dc-n-n-uc77c-ubc-1748009355865.txt  Pasted--csv-content-n-n-CSV-ud30c-uc77c-uc5c5-ubb34--1748018027124.txt  Pasted-Please-replace-st-experimental-get-query-params-with-st-query-params-st-experimental-get-query-p-1747466462821.txt  Pasted-data-application-pdf-base64-JVBERi0xLjUNCiW1tbW1DQoxIDAgb2JqDQo8PC9UeXBlL0NhdGFsb2cvUGFnZXMgMiAwIFIv-1748019375855.txt  SHB-NetBot_설계요약.md  app.py  ip주소신청서.html  shb-faq-finetune.jsonl  shb_netbot_ui.py  업무 안내 가이드_2025.05.19.xlsx
chroma_db/: chroma.sqlite3  chroma.sqlite3-journal
templates/: dashboard.html  (+11 more)
(+144 files in other folders)
