[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.0.9",
    "flask>=3.1.1",
    "openai>=1.79.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "streamlit>=1.45.1",
    "werkzeug>=3.1.3",
]
